; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hv_fetch_string.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hv_fetch_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dTHX = common dso_local global i32 0, align 4
@PG_UTF8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32** (i32*, i8*)* @hv_fetch_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32** @hv_fetch_string(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @dTHX, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = load i32, i32* @PG_UTF8, align 4
  %13 = call i8* @pg_server_to_any(i8* %9, i64 %11, i32 %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @strlen(i8* %14)
  %16 = trunc i64 %15 to i32
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %5, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32** @hv_fetch(i32* %18, i8* %19, i32 %20, i32 0)
  store i32** %21, i32*** %7, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = icmp ne i8* %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %2
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @pfree(i8* %26)
  br label %28

28:                                               ; preds = %25, %2
  %29 = load i32**, i32*** %7, align 8
  ret i32** %29
}

declare dso_local i8* @pg_server_to_any(i8*, i64, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32** @hv_fetch(i32*, i8*, i32, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
